--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
   body{ margin:0; background:var(--bg); color:var(--text); font:16px/1.5 system-ui,Segoe UI,Roboto }
   .wrap{ max-width:980px; margin:28px auto; padding:0 16px }
   .card{ background:var(--panel); border:1px solid var(--border); border-radius:14px; padding:20px; display:grid; gap:14px }
-  /* removed header logo */
+  /* header logo (big + centered) */
+  .head{ display:flex; justify-content:center; align-items:center; padding:6px 0 10px }
+  .head img{ height:96px; width:auto; filter:drop-shadow(0 6px 18px rgba(0,0,0,.35)); }
+  @media (max-width:520px){ .head img{ height:82px; } }
+
   .log{ background:var(--input); border:1px solid var(--border); border-radius:12px; padding:12px; height:50vh; overflow:auto }
   .msg{ max-width:78%; padding:10px 12px; border-radius:10px; margin:8px 0; white-space:pre-wrap }
   .u{ margin-left:auto; background:#24303a }
@@ -25,16 +29,18 @@
   .dot{ width:10px; height:10px; border-radius:50%; background:#666 }
   .mic.on .dot{ background:#ef4444; box-shadow:0 0 10px #ef4444 }
   select, input[type=range]{ accent-color:var(--accent); }
-  /* footer with big logo */
-  .foot{ display:flex; gap:14px; align-items:center; justify-content:center; margin-top:6px; color:var(--muted); text-align:center; flex-wrap:wrap }
-  .foot-logo{ height:92px; width:auto; filter:drop-shadow(0 6px 18px rgba(0,0,0,.35)); }
-  @media (max-width:520px){ .foot-logo{ height:80px; } }
+
+  /* footer credit */
+  .foot{ display:flex; gap:6px; align-items:center; justify-content:center; margin-top:4px; color:var(--muted); text-align:center; flex-wrap:wrap }
   .foot a{ color:var(--text); text-decoration:none; border-bottom:1px dotted var(--accent); }
   .foot a:hover{ color:var(--accent); }
 </style>
 
 <div class="wrap">
   <div class="card">
+    <!-- Header logo -->
+    <div class="head"><img src="/logo.png" alt="EDGE" /></div>
+
     <!-- Conversation -->
     <div id="log" class="log"></div>
     <div id="error" class="err"></div>
@@ -51,11 +57,6 @@
       </label>
 
       <label class="pill">
-        Voice
-        <select id="voice"></select>
-      </label>
-
-      <label class="pill">
         Rate <input id="rate" type="range" min="0.7" max="1.3" step="0.05" value="1" />
       </label>
     </div>
@@ -68,8 +69,7 @@
 
     <!-- Footer -->
     <div class="foot">
-      <img src="/logo.png" alt="EDGE" class="foot-logo" />
-      <div>Created by <a href="https://www.linkedin.com/in/awaiz-ahmed/" target="_blank" rel="noopener">Awaiz Ahmed</a></div>
+      Created by <a href="https://www.linkedin.com/in/awaiz-ahmed/" target="_blank" rel="noopener">Awaiz Ahmed</a>
     </div>
   </div>
 </div>
@@ -86,7 +86,6 @@
   const micHint = document.getElementById('micHint');
 
   const speakReplies = document.getElementById('speakReplies');
-  const voiceSel = document.getElementById('voice');
   const rateInp = document.getElementById('rate');
 
   const history = [];
@@ -136,40 +135,47 @@
   btn.onclick = send;
   t.addEventListener('keydown', (e)=>{ if(e.key==='Enter' && !e.shiftKey){ e.preventDefault(); send(); }});
 
-  // ------- TTS -------
+  // ------- TTS (single voice: Microsoft Emily Online (Natural)) -------
   let voices = [];
   function loadVoices(){
     voices = speechSynthesis.getVoices();
-    voiceSel.innerHTML = '';
-    voices.forEach(v=>{
-      const opt = document.createElement('option');
-      opt.value = v.name; opt.textContent = `${v.name} (${v.lang})`;
-      voiceSel.appendChild(opt);
-    });
-    const en = voices.find(v=>/en-GB|en-US|en-AU/i.test(v.lang)) || voices[0];
-    if (en) voiceSel.value = en.name;
   }
   if ('speechSynthesis' in window){
     loadVoices();
     window.speechSynthesis.onvoiceschanged = loadVoices;
   }
+
+  function pickEmily() {
+    if (!voices || !voices.length) return null;
+    // Try exact / partial matches first
+    let v =
+      voices.find(v => /microsoft/i.test(v.name) && /emily/i.test(v.name) && /natural|online|neural/i.test(v.name)) ||
+      voices.find(v => /microsoft/i.test(v.name) && /emily/i.test(v.name)) ||
+      voices.find(v => /emily/i.test(v.name)) ||
+      voices.find(v => /en-GB/i.test(v.lang) && /natural|online|neural/i.test(v.name)) ||
+      voices.find(v => /en-GB/i.test(v.lang)) ||
+      voices.find(v => /^en/i.test(v.lang)) ||
+      voices[0];
+    return v || null;
+  }
+
   function speak(text){
     if (!speakReplies.checked) return;
     if (!('speechSynthesis' in window)) return;
     const u = new SpeechSynthesisUtterance(text);
-    const v = voices.find(v=>v.name === voiceSel.value);
-    if (v) u.voice = v;
+    const voice = pickEmily();
+    if (voice) u.voice = voice;
     u.rate = parseFloat(rateInp.value) || 1.0;
     speechSynthesis.cancel();
     speechSynthesis.speak(u);
   }
 
-  // ------- STT -------
+  // ------- STT (Web Speech API) -------
   const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
   let rec = null, listening = false, interim = '';
   if (SR) {
     rec = new SR();
-    rec.lang = 'en-US';
+    rec.lang = 'en-GB';          // match Emily (UK)
     rec.interimResults = true;
     rec.continuous = false;
     rec.onstart = () => { listening = true; mic.classList.add('on'); micLabel.textContent = 'Listening…'; };
